Appearance-related modifications - footer put back in, whitespace stripped in Maneuver model, and the 'only one maneuver found' message fixed.

--- a/search_engine/static/style.css
+++ b/search_engine/static/style.css
@@ -1,7 +1,29 @@
 body {
-  padding-top: 20px;
+    padding-top: 20px;
 }
 
 .navbar {
-  margin-bottom: 20px;
+    margin-bottom: 20px;
+}
+
+/* Footer placement */
+
+html,
+body {
+    height: 100%;
+}
+
+/* Wrapper for page content to push down footer */
+#content {
+    min-height: 100%;
+    height: auto;
+    /* Negative indent footer by its height */
+    margin: 0 auto -60px;
+    /* Pad bottom by footer height*/
+    padding: 0 0 160px;
+}
+
+/* Set the fixed height of the footer here */
+#footer {
+    height: 60px;
 }
